--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,7 @@ espressoCore = "3.5.1"
 lifecycleRuntimeKtx = "2.7.0"
 activityCompose = "1.8.2"
 composeBom = "2024.04.00"
-androidxComposeCompiler = "1.5.10"
+androidxComposeCompiler = "1.5.12"
 pagingCompose = "3.2.1"
 pagingRuntimeKtx = "3.2.1"
 retrofit = "2.11.0"
@@ -20,6 +20,7 @@ coroutines = "1.8.0"
 kotlinxSerializationJson = "1.6.3"
 appcompat = "1.6.1"
 androidxArchCore = "2.2.0"
+androidxTest ="1.5.0"
 hilt = "2.51.1"
 timber ="5.0.1"
 room = "2.6.1"
@@ -55,6 +56,7 @@ hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
+room-testing = { group = "androidx.room", name = "room-testing", version.ref = "room" }
 
 #paging
 androidx-paging-compose = { module = "androidx.paging:paging-compose", version.ref = "pagingCompose" }
@@ -77,6 +79,9 @@ kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 timber-logs = {group="com.jakewharton.timber", name="timber" ,version.ref ="timber"}
 
+#testing
+androidx-runner = {module="androidx.test:runner" , version="androidxTest"}
+androidx-rules = {module="androidx.test:rules" , version="androidxTest"}
 
 
 [plugins]
