--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,9 +27,11 @@ timber ="5.0.1"
 room = "2.6.1"
 accompanist = "0.24.2-alpha"
 truth = "1.4.2"
-turbine = "1.0.0"
+turbine = "1.1.0"
 androidxTestRules = "1.5.0"
 androidxTestRunner = "1.5.2"
+mockito = "5.11.0"
+mockito-kotlin = "5.2.1"
 
 
 
@@ -91,6 +93,8 @@ truth = { group = "com.google.truth", name = "truth", version.ref = "truth" }
 turbine = { group = "app.cash.turbine", name = "turbine", version.ref = "turbine" }
 androidx-test-rules = { group = "androidx.test", name = "rules", version.ref = "androidxTestRules" }
 androidx-test-runner = { group = "androidx.test", name = "runner", version.ref = "androidxTestRunner" }
+mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockito" }
+mockito-kotlin  = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "mockito-kotlin" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
